--- a/network/docker-compose.yaml
+++ b/network/docker-compose.yaml
@@ -112,15 +112,16 @@ services:
 
   cli:
     container_name: cli
-    image: hyperledger/fabric-tools
+    image: hyperledger/fabric-tools:$IMAGE_TAG
     tty: true
+    stdin_open: true
     environment:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_ID=cli
       - CORE_PEER_ADDRESS=peer0.lab.kaizen-solutions.net:7051
-      - CORE_PEER_LOCALMSPID=DEFAULT
+      - CORE_PEER_LOCALMSPID=LabOrgMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/msp
     working_dir: /opt/gopath/src/chaincodedev
     command: /bin/bash -c './init_channel.sh'
