--- a/network/crypto-config.yaml
+++ b/network/crypto-config.yaml
@@ -3,6 +3,9 @@ OrdererOrgs:
     Domain: kaizen-solutions.net
     Specs:
       - Hostname: orderer
+        SANS:
+          - "localhost"
+          - "127.0.0.1"
 
 PeerOrgs:
   - Name: LabOrg
@@ -10,5 +13,8 @@ PeerOrgs:
     EnableNodeOUs: true
     Template:
       Count: 2
+      SANS:
+        - "localhost"
+        - "127.0.0.1"
     Users:
       Count: 1
