--- a/network/docker-compose.yaml
+++ b/network/docker-compose.yaml
@@ -9,10 +9,11 @@ services:
       - FABRIC_CA_SERVER_CA_NAME=ca-laborg
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_TLS_CERTFILE=/etc/hyperledger/fabric-ca-server-config/ca.lab.kaizen-solutions.net-cert.pem
-      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/$FABRIC_CA_SERVER_TLS_KEYFILE
+      - FABRIC_CA_SERVER_TLS_KEYFILE=/etc/hyperledger/fabric-ca-server-config/$KZS_CA_PRIVATE_KEY
+      - FABRIC_CA_SERVER_PORT=7054
     ports:
       - 7054:7054
-    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.lab.kaizen-solutions.net-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/$FABRIC_CA_SERVER_TLS_KEYFILE -b admin:adminpw -d'
+    command: sh -c 'fabric-ca-server start --ca.certfile /etc/hyperledger/fabric-ca-server-config/ca.lab.kaizen-solutions.net-cert.pem --ca.keyfile /etc/hyperledger/fabric-ca-server-config/$KZS_CA_PRIVATE_KEY -b admin:adminpw -d'
     volumes:
       - ./crypto-config/peerOrganizations/lab.kaizen-solutions.net/ca/:/etc/hyperledger/fabric-ca-server-config
     networks:
@@ -22,7 +23,7 @@ services:
     image: hyperledger/fabric-orderer:$IMAGE_TAG
     container_name: orderer.kaizen-solutions.net
     environment:
-      - ORDERER_GENERAL_LOGLEVEL=DEBUG
+      - FABRIC_LOGGING_SPEC=DEBUG
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_GENESISMETHOD=file
       - ORDERER_GENERAL_GENESISFILE=/var/hyperledger/orderer/orderer.genesis.block
@@ -50,16 +51,16 @@ services:
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=chocoblastchain
-      - CORE_LOGGING_LEVEL=INFO
-      - CORE_PEER_TLS_ENABLED=true
+      - FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_GOSSIP_USELEADERELECTION=true
       - CORE_PEER_GOSSIP_ORGLEADER=false
       - CORE_PEER_PROFILE_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
       - CORE_PEER_ID=peer0.lab.kaizen-solutions.net
+      - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_ADDRESS=peer0.lab.kaizen-solutions.net:7051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:7051
+      - CORE_PEER_CHAINCODEADDRESS=peer0.lab.kaizen-solutions.net:7052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.lab.kaizen-solutions.net:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.lab.kaizen-solutions.net:7051
       - CORE_PEER_LOCALMSPID=LabOrgMSP
@@ -72,8 +73,6 @@ services:
       - peer0.lab.kaizen-solutions.net:/var/hyperledger/production
     ports:
       - 7051:7051
-      - 7053:7053
-      - 7055:6060
     networks:
       - chocoblastchain
 
@@ -83,16 +82,16 @@ services:
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=chocoblastchain
-      - CORE_LOGGING_LEVEL=INFO
-      - CORE_PEER_TLS_ENABLED=true
+      - FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_GOSSIP_USELEADERELECTION=true
       - CORE_PEER_GOSSIP_ORGLEADER=false
       - CORE_PEER_PROFILE_ENABLED=true
-      - CORE_PEER_TLS_CERT_FILE=/etc/hyperledger/fabric/tls/server.crt
-      - CORE_PEER_TLS_KEY_FILE=/etc/hyperledger/fabric/tls/server.key
-      - CORE_PEER_TLS_ROOTCERT_FILE=/etc/hyperledger/fabric/tls/ca.crt
       - CORE_PEER_ID=peer1.lab.kaizen-solutions.net
+      - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_ADDRESS=peer1.lab.kaizen-solutions.net:8051
+      - CORE_PEER_LISTENADDRESS=0.0.0.0:8051
+      - CORE_PEER_CHAINCODEADDRESS=peer1.lab.kaizen-solutions.net:8052
+      - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:8052
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.lab.kaizen-solutions.net:8051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.lab.kaizen-solutions.net:8051
       - CORE_PEER_LOCALMSPID=LabOrgMSP
@@ -104,9 +103,7 @@ services:
       - ./crypto-config/peerOrganizations/lab.kaizen-solutions.net/peers/peer1.lab.kaizen-solutions.net/tls:/etc/hyperledger/fabric/tls
       - peer1.lab.kaizen-solutions.net:/var/hyperledger/production
     ports:
-      - 8051:7051
-      - 8053:7053
-      - 8055:6060
+      - 8051:8051
     networks:
       - chocoblastchain
 
@@ -118,14 +115,16 @@ services:
     environment:
       - GOPATH=/opt/gopath
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=chocoblastchain
       - FABRIC_LOGGING_SPEC=DEBUG
       - CORE_PEER_ID=cli
       - CORE_PEER_ADDRESS=peer0.lab.kaizen-solutions.net:7051
-      - CORE_PEER_LOCALMSPID=LabOrgMSP
+      - CORE_PEER_CHAINCODELISTENADDRESS=peer0.lab.kaizen-solutions.net:7051
       - CORE_PEER_TLS_ENABLED=true
       - CORE_PEER_TLS_CERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/lab.kaizen-solutions.net/peers/peer0.lab.kaizen-solutions.net/tls/server.crt
       - CORE_PEER_TLS_KEY_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/lab.kaizen-solutions.net/peers/peer0.lab.kaizen-solutions.net/tls/server.key
       - CORE_PEER_TLS_ROOTCERT_FILE=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/lab.kaizen-solutions.net/peers/peer0.lab.kaizen-solutions.net/tls/ca.crt
+      - CORE_PEER_LOCALMSPID=LabOrgMSP
       - CORE_PEER_MSPCONFIGPATH=/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/lab.kaizen-solutions.net/users/Admin@lab.kaizen-solutions.net/msp
     working_dir: /opt/gopath/src/github.com/hyperledger/fabric/peer
     command: /bin/bash
@@ -133,7 +132,6 @@ services:
       - /var/run/:/host/var/run/
       - ./../chaincode/:/opt/gopath/src/github.com/chaincode
       - ./crypto-config:/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
-      - ./scripts:/opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
       - ./channel-artifacts:/opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
     depends_on:
       - orderer.kaizen-solutions.net
@@ -144,6 +142,7 @@ services:
 
 networks:
   chocoblastchain:
+    external: true
 
 volumes:
   orderer.kaizen-solutions.net:
